crates/bijux-dna-domain-bam/tests/snapshots/bijux-dna-domain-bam__contracts__stage_contract__bam_authenticity.snap
---
source: crates/bijux-dna-domain-bam/tests/contracts/stage_contract_snapshots.rs
expression: "bijux_dna_testkit::snapshot_normalize_json(&json)"
---
{
  "audit_artifacts": [
    {
      "filename": "authenticity.json",
      "name": "authenticity_report"
    },
    {
      "filename": "damage_profile.json",
      "name": "damage_profile"
    },
    {
      "filename": "damage_plot.json",
      "name": "damage_plot"
    },
    {
      "filename": "pmd_scores.json",
      "name": "pmd_scores"
    },
    {
      "filename": "authenticity.summary.json",
      "name": "summary"
    },
    {
      "filename": "stage.metrics.json",
      "name": "stage_metrics"
    }
  ],
  "inputs": [
    "bam"
  ],
  "io": {
    "deterministic": true,
    "duplicate_policy": "preserves_duplicates",
    "emits_bam": false,
    "emits_report": true,
    "indexing": "requires_index_and_refuses_missing_index",
    "input_kind": "bam",
    "mapping_quality_policy": "no_mapping_quality_filter",
    "nondeterminism_reason": null,
    "output_kind": "report",
    "read_group_policy": "requires_read_groups_for_sample_metadata",
    "sorting": "requires_coordinate_sorted_input"
  },
  "outputs": [
    "authenticity_report",
    "summary",
    "stage_metrics"
  ],
  "schema_version": "bijux.stage_contract.v1",
  "stage_id": "bam.authenticity",
  "tool_ids": [
    "authenticct",
    "pmdtools"
  ]
}
