crates/bijux-dna-domain-bam/tests/snapshots/bijux-dna-domain-bam__contracts__stage_contract__bam_damage.snap
---
source: crates/bijux-dna-domain-bam/tests/contracts/stage_contract_snapshots.rs
expression: "bijux_dna_testkit::snapshot_normalize_json(&json)"
---
{
  "audit_artifacts": [
    {
      "filename": "damage.summary.json",
      "name": "damage_report"
    },
    {
      "filename": "damage.unified_metrics.json",
      "name": "terminal_position_metrics"
    },
    {
      "filename": "damage.parser_output.json",
      "name": "parser_output"
    },
    {
      "filename": "stage.metrics.json",
      "name": "stage_metrics"
    },
    {
      "filename": "damage_profile.json",
      "name": "damage_profile"
    },
    {
      "filename": "damage_plot.json",
      "name": "damage_plot"
    },
    {
      "filename": "damage_clusters.json",
      "name": "damage_clusters"
    },
    {
      "filename": "damage_parameters.json",
      "name": "damage_parameters"
    },
    {
      "filename": "pmd_scores.json",
      "name": "pmd_scores"
    }
  ],
  "inputs": [
    "bam"
  ],
  "io": {
    "deterministic": true,
    "duplicate_policy": "preserves_duplicates",
    "emits_bam": false,
    "emits_report": true,
    "indexing": "requires_index_and_refuses_missing_index",
    "input_kind": "bam",
    "mapping_quality_policy": "no_mapping_quality_filter",
    "nondeterminism_reason": null,
    "output_kind": "report",
    "read_group_policy": "requires_read_groups_for_sample_metadata",
    "sorting": "requires_coordinate_sorted_input"
  },
  "outputs": [
    "damage_report",
    "terminal_position_metrics",
    "parser_output",
    "stage_metrics"
  ],
  "schema_version": "bijux.stage_contract.v1",
  "stage_id": "bam.damage",
  "tool_ids": [
    "addeam",
    "damageprofiler",
    "mapdamage2",
    "ngsbriggs",
    "pmdtools",
    "pydamage"
  ]
}
