crates/bijux-dna-domain-bam/tests/snapshots/bijux-dna-domain-bam__contracts__stage_contract__bam_endogenous_content.snap
---
source: crates/bijux-dna-domain-bam/tests/contracts/stage_contract_snapshots.rs
expression: "bijux_dna_testkit::snapshot_normalize_json(&json)"
---
{
  "audit_artifacts": [
    {
      "filename": "endogenous.content.json",
      "name": "endogenous_report"
    },
    {
      "filename": "endogenous.summary.json",
      "name": "summary"
    },
    {
      "filename": "stage.metrics.json",
      "name": "stage_metrics"
    }
  ],
  "inputs": [
    "bam",
    "idxstats"
  ],
  "io": {
    "deterministic": true,
    "duplicate_policy": "no_duplicate_marking",
    "emits_bam": false,
    "emits_report": true,
    "indexing": "index_optional",
    "input_kind": "bam",
    "mapping_quality_policy": "no_mapping_quality_filter",
    "nondeterminism_reason": null,
    "output_kind": "report",
    "read_group_policy": "requires_read_groups_for_sample_metadata",
    "sorting": "accepts_unsorted_bam"
  },
  "outputs": [
    "endogenous_report",
    "summary",
    "stage_metrics"
  ],
  "schema_version": "bijux.stage_contract.v1",
  "stage_id": "bam.endogenous_content",
  "tool_ids": [
    "samtools"
  ]
}
